# VBoxWrapper

./: .gitignore  README.md  pyproject.toml
.github/: dependabot.yml
VBox/: VBox.py  VMExceptions.py  __init__.py  commands.py  virtualmachine.py
VBox/VirtualMachine/: FileUtils.py  __init__.py  virtualmachine.py
VBoxWrapper/: VBox.py  commands.py
VBoxWrapper/VirtualMachine/: FileUtils.py  network.py  network_adapter.py  snapshot.py  virtualmachine.py
vboxwrapper/: VBox.py  __init__.py  commands.py
vboxwrapper/VirtualMachine/: network.py  snapshot.py  storage.py  usb.py  virtualmachine.py
vboxwrapper/VirtualMachine/info/: __init__.py  config_parser.py  info.py
vboxwrapper/VirtualMachine/info/vm_config/: __init__.py  config_editor.py  config_parser.py
